--- a/table.html
+++ b/table.html
@@ -79,5 +79,9 @@
         <li>Table row : trow</li>
         <li>Table data or Table sell : td</li>
     </ul>
+
+    <button title="Please Click Me">Click Me</button>
+    <button disabled>Click Me</button>
+    <input type="number" min="5" max="10" name="" id="">
 </body>
 </html>
